--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,10 +1,11 @@
 {
-  "orgName": "Your Company",
+  "country": "IN",
+  "orgName": "Extentia Information Technology",
   "edition": "Developer",
-  "orgPreferences": {
-    "enabled": [
-      "S1DesktopEnabled"
-    ],
-    "disabled": []
-  }
+   "settings": {
+        "lightningExperienceSettings": {
+            "enableS1DesktopEnabled": true
+        }
+    },
+  "adminEmail": "dipti.kalal@extentia.com"
 }
